--- a/themes/Obsidian/bottom.html
+++ b/themes/Obsidian/bottom.html
@@ -12,7 +12,7 @@
 })();
 </script>
 <div id="bottomWrapper"> 
-        <div class="image" style="padding-top:20px"> HOSTING PANEL <i class="fa fa-heart pulse_heart" original-title="Love"></i> by <a href="https://github.com/hmrserver/" style="color: rgb(23, 108, 235);">DENVER</a>
+        <div class="image" style="padding-top:20px"> HOSTING PANEL <i class="fa fa-heart pulse_heart" original-title="Love"></i> by <a href="https://discord.gg/k7CZbh3YrR" style="color: rgb(23, 108, 235);">DENVER</a>
 		  %footer%
         </div> 
       </div> 
